# leela-chess

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  C  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Pseudo code  README.md  appveyor.yml
autogtp/: Production.cpp  Results.cpp
cmake/Modules/: FindBLAS.cmake  FindOpenCL.cmake
go/src/client/: README.md  lc0_main.go  main.go
go/src/client/http/: http.go
go/src/server/: README.md  UPDATES  main.go  main_test.go  prod.sh  serverconfig.json  start.sh
go/src/server/cmd/bootstrap/: main.go
go/src/server/cmd/compact_games/: main.go  run.sh
go/src/server/cmd/compact_pgns/: main.go
go/src/server/cmd/tweaks/: main.go
go/src/server/config/: config.go
go/src/server/db/: db.go  models.go
go/src/server/nginx/: default
go/src/server/sprt/: sprt.go
go/src/server/templates/: active_users.tmpl  base.tmpl  game.tmpl  index.tmpl  match.tmpl  matches.tmpl  networks.tmpl  stats.tmpl  training_data.tmpl  training_runs.tmpl  user.tmpl
lc0/: CMakeLists.txt  Dockerfile  README.md  build.sh  install.sh  meson.build  meson_options.txt
lc0/LC0VSProj/: LC0VSProj.vcxproj
lc0/cmake/modules/: FindCUDNN.cmake
lc0/src/: CMakeLists.txt  engine.cc  engine.h  main.cc
lc0/src/chess/: CMakeLists.txt  bitboard.h  board.cc  board.h  position.cc  position.h  uciloop.cc  uciloop.h
lc0/src/chess/test/: board_test.cc
lc0/src/mcts/: CMakeLists.txt  node.cc  node.h  search.cc  search.h
lc0/src/neural/: CMakeLists.txt  Network.cpp  Network.h  blas_config.h  blas_transforms.cc  blas_transforms.h  cache.cc  cache.h  encoder.cc  factory.cc  loader.cc  loader.h  network_blas.cc  network_blas_cl.h  network_blas_cl_common.cc  network_blas_cl_common.h  network_cudnn.cu  network_mux.cc  network_old.cpp  network_old.h  network_opencl.cc  network_random.cc  writer.cc
lc0/src/neural/cuda/: CMakeLists.txt  network_cudnn.cu
lc0/src/neural/opencl/: OpenCL.cpp  OpenCL.h  OpenCLScheduler.cpp  OpenCLScheduler.h  OpenCLTuner.cpp  OpenCLUtils.cpp  OpenCLUtils.h  Tuner.cpp  Tuner.h  Utils.cpp  Utils.h  blas_config.h
lc0/src/selfplay/: CMakeLists.txt
lc0/src/utils/: CMakeLists.txt  filesystem.posix.cc  optionsparser.cc  optionsparser.h  transpose.cc
msvc/: leela-chess2017.sln
msvc/Sample-Test1/: Sample-Test1.vcxproj
msvc/VS2017/: leela-chess.vcxproj  leela-chess.vcxproj.filters  packages.config
msvc/tests/: packages.config  tests.vcxproj  tests.vcxproj.filters
scripts/: run-lc0.sh  run.sh  train.sh
scripts/colab/: Leela_K80.ipynb
scripts/logos/: README.md
scripts/resign_analysis/: resign_analysis.py
scripts/stats/: netstats.py
scripts/weight_skewness/: compute_skewness.py  download_weights.py  weights_file.py
server/: README.md  main.go  prod.sh
server/public/: index.html
src/: Bitboard.cpp  Bitboard.h  Im2Col.h  Makefile  Misc.cpp  Misc.h  Movegen.cpp  Movegen.h  NNCache.cpp  NNCache.h  Network.cpp  Network.h  OpenCL.cpp  OpenCL.h  OpenCLScheduler.cpp  Parameters.cpp  Parameters.h  Position.cpp  Position.h  Random.cpp  Random.h  SMP.cpp  SMP.h  TTable.cpp  TTable.h  TimeMan.cpp  TimeMan.h  Timing.cpp  Training.cpp  Training.h  Tuner.cpp  Tuner.h  Types.h  UCI.cpp  UCI.h  UCIOption.cpp  UCTNode.cpp  UCTNode.h  UCTSearch.cpp  UCTSearch.h  (+7 more)
src/CL/: cl2.hpp
src/syzygy/: README.md  tbprobe.cpp  tbprobe.h
src/tests/: network_test.cpp  perf_test.cpp  position_test.cpp  random_test.cpp
src/tests/Sample-Test1/: Sample-Test1.vcxproj
training/tf/: chunkparser.py  convert_to_v3.py  convert_v2_v3.cpp  decode_training.py  enable_cuda.sh  leela_to_proto.py  net_to_model.py  new_movelist.txt  old_movelist.txt  parse.py  requirements.txt  scale_r50_from_user.awk  scale_r50_to_user.awk  start.py  start.sh  supervised_parse.py  test_v2.py  tfprocess.py  train.py  write_random.py
training/tf/configs/: 279-286.yaml  287-301.yaml  current.yaml  example.yaml  example2.yaml  example_multigpu.yaml
